# domtbl2unaln

./: Cargo.toml
lib/: burkholderiales_odb10_scores_cutoff  jgi434_scores_cutoff  mollicutes_odb10_scores_cutoff  mucorales_odb10_scores_cutoff  odb10_marker_list  odb10_scores_cutoff
src/: hits.rs  lib.rs  main.rs  main_bak.rs
