[package]
name = "domtbl2unaln"
version = "0.1.0"
authors = ["amsesk <amsesk@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = {git = "https://github.com/rust-bio/rust-bio"}
clap = "3.0.0-beta.1"
lazy_static = "1.4.0"
multimap = "0.8.1"
csv = "1.1"
linked-hash-map ="0.5.3"
